--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.16",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2"
