--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.1",
+		"firebase-tools": "^9.16.0",
 		"graphql": "^15.5.1",
 		"graphql-tag": "^2.12.5",
 		"jwt-decode": "^3.1.2",
